# aliste-smart-home-sdk

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
aliste/: __init__.py  broker.py  constants.py  device.py  enums.py  errors.py  home.py  hub.py  socket.py  user.py  utils.py
docs/: PROTOCOL.md
scripts/: test_live.py
