[tool.poetry]
name = "aliste"
version = "1.0.1"
description = "Aliste Smart Home SDK for Python"
authors = ["Raj Kishore <40551183+rkzofficial@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
aiomqtt = "^2.0.1"
aiohttp= "*"
asyncio = "^3.4.3"
certifi = "*"
aws-signv4-mqtt = "^0.2.0"
boto3 = "^1.34.88"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
