[project]
name = "aliste"
version = "2.1.1"
description = "Async Python SDK for Aliste Smart Home devices."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Raj Kishore", email = "40551183+rkzofficial@users.noreply.github.com" },
]
keywords = ["aliste", "iot", "mqtt", "smart-home"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp>=3.13.3,<4.0.0",
    "aiomqtt>=2.5.1,<3.0.0",
    "aws-signv4-mqtt>=0.2.0,<0.3.0",
    "boto3>=1.42.67,<2.0.0",
    "certifi>=2026.2.25,<2027.0.0",
]

[project.urls]
Homepage = "https://github.com/rkzofficial/aliste-smart-home-sdk"
Repository = "https://github.com/rkzofficial/aliste-smart-home-sdk"
Issues = "https://github.com/rkzofficial/aliste-smart-home-sdk/issues"

[dependency-groups]
dev = [
    "mypy>=1.19.1,<1.20.0",
    "ruff>=0.15.6,<0.16.0",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "aliste"
module-root = ""

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
